Fix h1 element being covered

--- a/styles.css
+++ b/styles.css
@@ -43,4 +43,5 @@
 
 body {
 background-color: #223445;
+padding-top: 80px;
 }
